# pybind11-example

./: .gitignore  .gitmodules  README.md
simple-usage/: MANIFEST.in  setup.py
simple-usage/python/simpleusage/: __init__.py
simple-usage/python/simpleusage/pybind/: simpleusage_pybind.cc
simple-usage/python/simpleusage/tests/: __init__.py
simple-usage/src/: test.h
with-cmake/: CMakeLists.txt  MANIFEST.in  setup.py
with-cmake/python/withcmake/: __init__.py
with-cmake/python/withcmake/pybind/: withcmake_pybind.cc
with-cmake/python/withcmake/tests/: __init__.py
with-cmake/src/: test.cc  test.h
with-cuda/: CMakeLists.txt  MANIFEST.in  setup.py
with-cuda/python/cuBERT/: __init__.py
with-cuda/python/cuBERT/pybind/: cuBERT_pybind.cc
with-cuda/python/cuBERT/tests/: __init__.py  example_compute_tokenize.py
